--- a/initial_modeling.qmd
+++ b/initial_modeling.qmd
@@ -6,8 +6,8 @@ library(tidyverse)
 library(tibble)
 library(ggplot2)
 library(data.table)
-# library(DT)
-# library(broom)
+library(DT)
+library(broom)
 library(devtools)
 # library(viridis)
 library(knitr)
