--- a/reg_cal.qmd
+++ b/reg_cal.qmd
@@ -8,6 +8,8 @@ library(ggplot2)
 library(knitr)
 library(hrbrthemes)
 library(viridis)
+library(broom)
+library(boot) # for bootstrap SE
 
 library(devtools)
 #using data specified in this github repository:
@@ -18,6 +20,15 @@ library(cardioStatsUSA)
 ```{r}
 #Read in the subset data
 subset_nhanes <- readRDS("nhanes_subset.rds")
+
+table(subset_nhanes$demo_race)
+table(subset_nhanes$demo_gender)
+table(subset_nhanes$demo_age_years)
+table(subset_nhanes$cc_smoke)
+table(subset_nhanes$cc_bmi)
+table(subset_nhanes$bp_med_use)
+table(subset_nhanes$cc_diabetes)
+
 ```
 
 ## Naive Analysis
@@ -25,7 +36,7 @@ subset_nhanes <- readRDS("nhanes_subset.rds")
 Before starting with regression calibration, we first want to see what a model that only uses our noisy data looks like. We'll use the same model formula as before (including age, race, smoking status etc.), the only difference being that we will use our error-full data, specifically the low reliability case.
 
 ```{r}
-naive.model=glm(cc_diabetes ~ bp_sys_mean_noise_low + demo_age_years + demo_race + demo_gender+ cc_bmi + cc_smoke + bp_med_use, family="binomial", data=subset_nhanes)
+naive.model=glm(cc_diabetes ~ bp_sys_mean_noise_low, family="binomial", data=subset_nhanes)
 summary(naive.model)
 knitr::kable(tidy(naive.model, exponentiate = TRUE, conf.int = TRUE), digits = 3)
 ```
@@ -37,7 +48,7 @@ Looking at the summary above, the significant coefficients, and therefore the va
 Next, we'll look at our "true" model, the model which uses our unbiased, non-error blood pressure values:
 
 ```{r}
-true.model=glm(cc_diabetes ~ bp_sys_mean + demo_age_years + demo_race + demo_gender+ cc_bmi + cc_smoke + bp_med_use, family="binomial", data=subset_nhanes)
+true.model=glm(cc_diabetes ~ bp_sys_mean, family="binomial", data=subset_nhanes)
 summary(true.model)
 knitr::kable(tidy(true.model, exponentiate = TRUE, conf.int = TRUE), digits = 3)
 ```
@@ -49,11 +60,10 @@ For this subset of the data, the true beta value for the systolic mean is ... Th
 ```{r}
 #Create a model with predicts the true BP value based on the noisy BP data
 rcfit<-lm(bp_sys_mean ~ bp_sys_mean_noise_low, data=subset_nhanes)
-#Add in to lm(): + demo_age_years + demo_race + demo_gender+ cc_bmi + cc_smoke + bp_med_use
 summary(rcfit)
 subset_nhanes$bp_hat <- predict(rcfit, newdata=subset_nhanes) 
 
-final.model = glm(cc_diabetes ~ bp_hat + demo_age_years + demo_race + demo_gender+ cc_bmi + cc_smoke + bp_med_use, family="binomial",data=subset_nhanes)
+final.model = glm(cc_diabetes ~ bp_hat, family="binomial",data=subset_nhanes)
 summary(final.model)
 knitr::kable(tidy(final.model, exponentiate = TRUE, conf.int = TRUE), digits = 3)
 
@@ -61,4 +71,26 @@ knitr::kable(tidy(final.model, exponentiate = TRUE, conf.int = TRUE), digits = 3
 
 ```{r}
 print(paste("Correlation between BP_noise and BP_hat:", cor(subset_nhanes$bp_sys_mean_noise_low, subset_nhanes$bp_hat)))
+```
+
+Fix Standard Errors:
+
+```{r}
+#warning = False
+set.seed(14)
+
+bootstrap.functionV2<-function(dat,inds){
+	subset_nhanes.boot<-dat[inds,]
+	rcfit.boot<-lm(bp_sys_mean ~ bp_sys_mean_noise_low, data=subset_nhanes.boot)
+	subset_nhanes.boot$bp_hat<-predict(rcfit.boot,newdata=subset_nhanes.boot)
+	final.model= glm(cc_diabetes ~ bp_hat, family="binomial", data=subset_nhanes.boot)
+	return(final.model$coef)
+}
+
+my.boot<-boot(subset_nhanes, bootstrap.functionV2, R=1000)
+bsSD <- apply(my.boot$t,2,sd)
+bsSD
+
+t.stat<-coef(final.model)/bsSD
+t.stat
 ```
