--- a/visualization.qmd
+++ b/visualization.qmd
@@ -1,9 +1,10 @@
-# Data Examination
+# Data Visualization
 
 ```{r message = FALSE, warning = FALSE}
 
 library(dplyr)
 library(tidyverse)
+library(gtsummary)
 library(tibble)
 library(ggplot2)
 library(data.table)
@@ -49,58 +50,58 @@ nhanes_data_test <- nhanes_data_test %>%
 
 print(paste0("n =", nrow(nhanes_data_test)))
 
-ds <- nhanes_data_test %>%
- nhanes_design(
-  key = nhanes_key,
-  outcome_variable = 'htn_jnc7',
-  group_variable = 'demo_age_cat',
-  time_values = '2015-2016'
- )
+# ds <- nhanes_data_test %>%
+#  nhanes_design(
+#   key = nhanes_key,
+#   outcome_variable = 'htn_jnc7',
+#   group_variable = 'demo_age_cat',
+#   time_values = '2015-2016'
+#  )
+# 
+# print(ds)
 
-print(ds)
-
-ds_standard <- ds %>%
- nhanes_design_standardize(
-  standard_variable = 'demo_age_cat',
-  standard_weights = c(0.420263, 0.357202, 0.222535)
- )
+# ds_standard <- ds %>%
+#  nhanes_design_standardize(
+#   standard_variable = 'demo_age_cat',
+#   standard_weights = c(0.420263, 0.357202, 0.222535)
+#  )
 ```
 
 Recreating the given graphs with the nhanes_visualize() function
 
 ```{r}
 #nhanes_summarize(nhanes_data_test, nhanes_key, outcome_variable = "demo_age_cat")
-nhanes_visualize(
-  data = nhanes_data, 
-  key = nhanes_key, 
-  outcome_variable = "bp_sys_mean",
-  outcome_stats = 'mean',
-  standard_variable = "demo_age_cat", 
-  time_values = c("2013-2014", "2015-2016", "2017-2020"), 
-  group_variable = "demo_age_cat"
-  )
-
-nhanes_htn_subpop <- nhanes_data[nhanes_data$htn_accaha == "Yes", ]
-
-nhanes_visualize(
-  data = nhanes_htn_subpop, 
-  key = nhanes_key, 
-  outcome_variable = "bp_control_accaha",
-  outcome_stats = 'percentage',
-  standard_variable = "demo_age_cat", 
-  group_variable = "demo_gender"
-  )
+# nhanes_visualize(
+#   data = nhanes_data, 
+#   key = nhanes_key, 
+#   outcome_variable = "bp_sys_mean",
+#   outcome_stats = 'mean',
+#   standard_variable = "demo_age_cat", 
+#   time_values = c("2013-2014", "2015-2016", "2017-2020"), 
+#   group_variable = "demo_age_cat"
+#   )
+# 
+# nhanes_htn_subpop <- nhanes_data[nhanes_data$htn_accaha == "Yes", ]
+# 
+# nhanes_visualize(
+#   data = nhanes_htn_subpop, 
+#   key = nhanes_key, 
+#   outcome_variable = "bp_control_accaha",
+#   outcome_stats = 'percentage',
+#   standard_variable = "demo_age_cat", 
+#   group_variable = "demo_gender"
+#   )
 ```
 
 ```{r}
-nhanes_visualize(
-  data = nhanes_data, 
-  key = nhanes_key, 
-  outcome_variable = "bp_dia_mean",
-  outcome_stats = 'mean',
-  standard_variable = "demo_age_cat", 
-  group_variable = "demo_gender"
-  )
+# nhanes_visualize(
+#   data = nhanes_data, 
+#   key = nhanes_key, 
+#   outcome_variable = "bp_dia_mean",
+#   outcome_stats = 'mean',
+#   standard_variable = "demo_age_cat", 
+#   group_variable = "demo_gender"
+#   )
 ```
 
 ## Descriptive Graphs
